Fixed build failure on CrayPE. std::make_unique is not supported by inten c compiler?.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ set (LIB_TYPE STATIC)
 string(TOLOWER ${LIB_TYPE} SEARCH_TYPE)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    set(HDF5_LIBRARY "${LOCAL_LIBRARYDIR}/lib/libhdf5.a")
+    set(HDF5_LIBRARY "${LOCAL_LIBRARYDIR}/lib/libhdf5.a;${LOCAL_LIBRARYDIR}/lib/libz.a")
     set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${HDF5_LIBRARY})
 else()
     find_package (HDF5 NAMES hdf5 REQUIRED COMPONENTS C ${SEARCH_TYPE} HINTS ${LOCAL_LIBRARYDIR}/lib)
@@ -84,11 +84,11 @@ IF(DOXYGEN_FOUND)
 ENDIF(DOXYGEN_FOUND)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    set(CXX_WARNING_FLAGS "-Wimplicit -Wreturn-type -Wswitch -Wcomment -Wformat=2 -Wuninitialized -Wcast-qual -Wcast-align -Wwrite-strings -Wpointer-arith -Winit-self -Wno-unused-local-typedefs")
+    set(CXX_WARNING_FLAGS "-Wimplicit -Wreturn-type -Wswitch -Wcomment -Wformat=2 -Wuninitialized -Wwrite-strings -Wpointer-arith -Winit-self")
 
     #set(CRAYPE_LINK_TYPE "dynamic")
-    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -C -traceback ${CXX_WARNING_FLAGS} -mcmodel=medium -fpic -dynamic -shared-intel -mkl")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mcmodel=medium -fpic -dynamic -shared-intel -mkl")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -C -traceback ${CXX_WARNING_FLAGS} -mcmodel=medium -fpic -dynamic -shared-intel -mkl -qopenmp")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mcmodel=medium -fpic -dynamic -shared-intel -mkl -qopenmp")
 
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     set(CXX_WARNING_FLAGS "/W4")
@@ -154,11 +154,13 @@ CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 if(COMPILER_SUPPORTS_CXX14)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 elseif(COMPILER_SUPPORTS_CXX11)
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support.")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 elseif(COMPILER_SUPPORTS_CXX0X)
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 else()
-    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
+    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++0x support.")
 endif()
 # -----------------
 file(GLOB_RECURSE SRCS 
