HDF5をparallelビルドして、決め打ちでHDF5とzlibをリンクするように変更 / Cmatrixの読み込みを並列読み込み化に変更

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ message(STATUS "Boost LIBRARIES  : ${Boost_LIBRARIES}")
 set (LIB_TYPE STATIC)
 string(TOLOWER ${LIB_TYPE} SEARCH_TYPE)
 
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     set(HDF5_LIBRARY "${LOCAL_LIBRARYDIR}/lib/libhdf5.a;${LOCAL_LIBRARYDIR}/lib/libz.a")
     set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${HDF5_LIBRARY})
 else()
