CrayLinuxEnvironment上でのビルド方法を変更

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     set(HOME "$ENV{USERPROFILE}")
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     set(HOME "$ENV{HOME}")
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "CrayLinuxEnvironment")
     set(HOME "$ENV{HOME}")
 endif()
 message(STATUS "HOME PATH = ${HOME}")
@@ -62,6 +62,12 @@ string(TOLOWER ${LIB_TYPE} SEARCH_TYPE)
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     set(HDF5_LIBRARY "${LOCAL_LIBRARYDIR}/lib/libhdf5.a;${LOCAL_LIBRARYDIR}/lib/libz.a")
     set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${HDF5_LIBRARY})
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "CrayLinuxEnvironment")
+    link_directories( "$ENV{HDF5_DIR}/lib" )
+    include_directories( "$ENV{HDF5_INCLUDE_OPTS}" )
+    find_library(HDF5_LIBRARY NAMES hdf5 PATHS "$ENV{HDF5_DIR}/lib")
+    find_library(ZLIB_LIBRARY NAMES z)
+    set(CXX_REQUIRED_LIBS ${CXX_REQUIRED_LIBS} ${HDF5_LIBRARY} ${ZLIB_LIBRARY})
 else()
     find_package (HDF5 NAMES hdf5 REQUIRED COMPONENTS C ${SEARCH_TYPE} HINTS ${LOCAL_LIBRARYDIR}/lib)
     link_directories(${HDF5_LIBRARY_DIRS}) # for zlib inclusion
@@ -83,13 +89,10 @@ IF(DOXYGEN_FOUND)
         DEPENDS  ${DOXYGEN_CONF_PATH})
 ENDIF(DOXYGEN_FOUND)
 
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "CrayLinuxEnvironment")
     set(CXX_WARNING_FLAGS "-Wimplicit -Wreturn-type -Wswitch -Wcomment -Wformat=2 -Wuninitialized -Wwrite-strings -Wpointer-arith -Winit-self")
-
-    #set(CRAYPE_LINK_TYPE "dynamic")
     set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -C -traceback ${CXX_WARNING_FLAGS} -mcmodel=medium -fpic -dynamic -shared-intel -mkl -qopenmp")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -mcmodel=medium -fpic -dynamic -shared-intel -mkl -qopenmp")
-
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     set(CXX_WARNING_FLAGS "/W4")
 
