--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ endif()
 
 # add include and submodules
 include_directories(${CMAKE_SOURCE_DIR}/picojson)
+include_directories(${CMAKE_SOURCE_DIR}/eigen)
 include_directories(${CMAKE_SOURCE_DIR}/SimpleVTK/include)
 include_directories(${CMAKE_SOURCE_DIR}/HighFive/include)
 include_directories(${CMAKE_SOURCE_DIR}/include)
